--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-Flask==0.12
-Jinja2==2.9.4
+flask==1.0.0
+Jinja2==2.10.1
 MarkupSafe==0.23
-Werkzeug==0.11.15
+werkzeug==0.15.3
 click==6.7
 gunicorn==19.6.0
 itsdangerous==0.24
